# mecis-rocket

./: .travis.yml  Cargo.toml  README.md  insert.py
frontend/: MecisFrontend.elm  elm-package.json  mecis.html
src/: main.rs
templates/: mecis.html.hbs  view.html.hbs
