[package]
name = "mecis-rocket"
version = "0.1.0"
authors = ["Sven Thiele <sthiele78@gmail.com>"]

[dependencies]
rocket = "0.3.12"
rocket_codegen = "0.3.12"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
dotenv = "0.10"

[dependencies.rocket_contrib]
version = "0.3.12"
default-features = false
features = ["json"]

[dependencies.mysql]
version = "*"
features = ["ssl"]
