[package]
name = "mecis-rocket"
version = "0.1.0"
authors = ["Sven Thiele <sthiele78@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
dotenv = "0.10"

[dependencies.rocket_contrib]
version = "0.4.0"
default-features = false
features = ["json"]

[dependencies.mysql]
version = "*"
features = ["ssl"]

